fix form label misalignment

--- a/astro/style.css
+++ b/astro/style.css
@@ -6,3 +6,7 @@ body {
 	background-size:cover;
 	background-attachment: fixed; 
 } 
+
+.jumbotron .form-horizontal .control-label {
+	line-height: 1;
+}
